# SnippetSaver

./: CMakeLists.txt  Main.qml  Resource.qrc  main.cpp
Components/: GlobalActions.qml  LeftSidePane.qml  MiddlePane.qml  PrefsToolbar.qml  RightSidePane.qml  SettingsPage.qml
Utils/UI_Services/: GlobalActions.qml
ViewComponents/MainPage/: LeftSidePane.qml  MiddlePane.qml  PrefsToolbar.qml  RightSidePane.qml  SettingsPage.qml
